<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".AccountInfoActivity">

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="125dp"
        android:layout_height="125dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_android_black_24dp" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/white"
        android:hint="@string/name"
        android:textSize="28sp"
        app:layout_constraintEnd_toStartOf="@id/iv_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/et_username"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_photo"
        android:textSize="20sp"
        android:hint="@string/username"/>
    <EditText
        android:id="@+id/et_import_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_photo"
        app:layout_constraintTop_toBottomOf="@id/et_username"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="28sp"
        android:hint="@string/password"
        android:inputType="textWebPassword"/>
    <Button
        android:id="@+id/btn_change_photo"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/gradient_button_background2x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_photo"
        app:layout_constraintTop_toBottomOf="@id/et_import_password"
        android:text="@string/change_photo"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="15sp"/>
    <EditText
        android:id="@+id/et_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/btn_change_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_photo"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:hint="@string/age"
        android:textSize="28sp"
        android:focusable="false"/>

    <Button
        android:id="@+id/btn_date_picker"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toStartOf="@id/iv_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_age"
        android:textSize="20sp"
        android:text="Choose birth date"
        android:background="@android:color/white"/>
    <Spinner
        android:id="@+id/spn_country"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/btn_date_picker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_photo"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>
    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="Gender"
        app:layout_constraintTop_toBottomOf="@id/spn_country"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="20sp"/>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rg_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_gender"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/female"
            android:textSize="22sp"
            android:buttonTint="@android:color/white"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_male"
            android:textColor="@android:color/white"
            android:text="@string/male"
            android:textSize="22sp"
            android:buttonTint="@android:color/white"/>
        <RadioButton
            android:id="@+id/rb_neither"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prefer_not_to_answer"
            android:checked="true"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:buttonTint="@android:color/white"/>
    </RadioGroup>

    <EditText
        android:id="@+id/et_postal"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/white"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="Postal address (Opt.)"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/iv_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_gender" />
    <Button
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:background="@drawable/gradient_button_background2x"
        app:layout_constraintStart_toEndOf="@id/et_postal"
        app:layout_constraintTop_toTopOf="@id/et_postal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/et_postal"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/save"/>




</androidx.constraintlayout.widget.ConstraintLayout>