<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@android:color/black">

    <!--Create back button along top of screen-->
    <Button
        android:id="@+id/btn_back_to_main"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/ic_keyboard_arrow_left_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Create title text for activity-->
    <TextView
        android:id="@+id/tv_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back_to_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_back_to_main"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Create fields and descriptions-->
    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/btn_back_to_main" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_divider"
        android:text="@string/email_address"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:layout_marginStart="35dp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bg_red"
        app:layout_constraintLeft_toLeftOf="@id/tv_email"
        app:layout_constraintStart_toStartOf="@id/tv_email"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:textSize="28sp"
        android:inputType="textEmailAddress"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_create_password"
        android:textColor="@android:color/white"
        android:text="@string/create_password"
        app:layout_constraintStart_toStartOf="@id/tv_email"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        android:layout_marginTop="30dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bg_red"
        app:layout_constraintTop_toBottomOf="@id/tv_create_password"
        app:layout_constraintStart_toStartOf="@id/tv_create_password"
        app:layout_constraintLeft_toLeftOf="@id/tv_create_password"
        android:id="@+id/et_create_password"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="35dp"
        android:textSize="28sp"
        android:inputType="textWebPassword"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_match_password"
        android:textColor="@android:color/white"
        android:text="@string/repeat_password"
        app:layout_constraintTop_toBottomOf="@id/et_create_password"
        app:layout_constraintStart_toStartOf="@id/tv_create_password"
        android:layout_marginTop="30dp"
        android:textSize="28sp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_match_password"
        android:background="@drawable/edittext_bg_red"
        app:layout_constraintTop_toBottomOf="@id/tv_match_password"
        android:textSize="28sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="35sp"
        android:layout_marginRight="35sp"
        android:inputType="textWebPassword"/>

    <TextView
        android:id="@+id/tv_password_requirements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="35dp"
        android:text="@string/password_requirements"
        android:textColor="@android:color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_email"
        app:layout_constraintTop_toBottomOf="@id/et_match_password"
        android:layout_marginLeft="50dp"
        android:textSize="18sp"/>

    <!--Create button to go to next screen-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/gradient_button_background2x"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/btn_next"
        android:layout_marginBottom="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/next"
        android:textSize="28sp"
        android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>